--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -8,6 +8,7 @@
     border-radius: 50px;
     border: 1px solid #5a5a5a;
     background-color: #58585866;
+    color: #fff;
     &::placeholder {
       font-family: $font-primary-500;
       font-size: 1rem;
